--- a/homepage-2.html
+++ b/homepage-2.html
@@ -81,7 +81,7 @@
             <div class="do-side-menu-widget-wrap">
                 <!-- LOGO -->
                 <div class="do-side-menu-logo-wrap">
-                    <a href="index.html">
+                    <a href="index.php">
                         <img src="images/side-menu-logo.png" alt="DO">
                     </a>
                 </div>
@@ -228,7 +228,7 @@
                     </button>
 
                     <!-- Logo -->
-                    <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" alt="DO"></a>
+                    <a class="navbar-brand" href="index.php"><img class="logo" src="images/logo.png" alt="DO"></a>
 
                 </div>
                 <!-- Navbar Toggle End -->
@@ -240,7 +240,7 @@
                             <a href="homepage-2.html">Home</a>
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="index.html">Homepage 1</a>
+                                    <a href="index.php">Homepage 1</a>
                                 </li>
                                 <li>
                                     <a href="homepage-3.html">Homepage 3</a>
