--- a/portfolio-single-one.html
+++ b/portfolio-single-one.html
@@ -79,7 +79,7 @@
             <div class="do-side-menu-widget-wrap">
                 <!-- LOGO -->
                 <div class="do-side-menu-logo-wrap">
-                    <a href="index.html">
+                    <a href="index.php">
                         <img src="images/side-menu-logo.png" alt="DO">
                     </a>
                 </div>
@@ -172,7 +172,7 @@
                     <button class="do-side-menu-button" id="do-side-menu-open-button"></button>
 
                     <!-- Logo -->
-                    <a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.png" alt="DO"></a>
+                    <a class="navbar-brand" href="index.php"><img class="logo" src="images/logo.png" alt="DO"></a>
 
                 </div>
                 <!-- Navbar Toggle End -->
@@ -181,7 +181,7 @@
                 <div id="nav-menu" class="navbar-collapse do-menu-wrapper collapse" role="navigation">
                     <ul class="nav navbar-nav do-menus">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index.php">Home</a>
                             <ul class="sub-menu">
                                 <li>
                                     <a href="homepage-2.html">Homepage 2</a>
@@ -264,7 +264,7 @@
 
                 	<div class="do-breadcumb">
                 		<ul>
-                			<li><a href="index.html">HOME</a></li>
+                			<li><a href="index.php">HOME</a></li>
                 			<li><span>PORTFOLIO</span></li>
                 		</ul>
                 	</div>
